# rememory

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.pckgr/: settings.json
src/rememory/: __init__.py  namedLock.py  sharedBlock.py  sharedBool.py  sharedDict.py  sharedFloat.py  sharedInt.py  sharedList.py  sharedSet.py  sharedString.py
