[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "rememory"
version = "0.3.4"
description = "A set of lightweight shared memory variable types for safe multiprocessing access"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pywin32", "win32con", "win32event"]
[[project.authors]]
name = "Nichola Walch"
email = "littler.compression@gmail.com"

[project.license]
text = "MIT"

[project.scripts]
rememory = "testScript.__init__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src",]
